EIP-139 - Updated build to allow executing of code that uses reflection